fixed title clipping

--- a/src/Components/Questionaire.css
+++ b/src/Components/Questionaire.css
@@ -1,7 +1,7 @@
 .questionaire
 {
     text-align: center;
-    padding-top: 10vh;
+    padding-top: 150px;
     font-weight: bold;
     color: #5F8868;
 }
